--- a/vue-project/index.html
+++ b/vue-project/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>DATAMA2 Final Project</title>
+    
+    <!-- Favicon (Replace with a direct image link or local path) -->
+    <link rel="icon" href="https://www.veryicon.com/icons/miscellaneous/streamline/database-39.png" type="image/png">
   </head>
   <body>
     <div id="app"></div>
